@@ -1,0 +1,5 @@
+<RCC>
+  <qresource>
+    <file>icon_journals.svg</file>
+  </qresource>
+</RCC>
