@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>:/icon_journals.svg</normaloff>:/icon_journals.svg</iconset>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
@@ -729,6 +733,8 @@
   <tabstop>designatorEdit</tabstop>
   <tabstop>CommentsEdit</tabstop>
  </tabstops>
- <resources/>
+ <resources>
+  <include location="aabooks.journal.journals.qrc"/>
+ </resources>
  <connections/>
 </ui>
